# plannr

./: .env  .gitignore  Cargo.toml  devel  plannr.code-workspace
.sqlx/: query-1e7a7870ddff683b98a263e3fefd2eea556b3ccaaba32c608333d4be632c9ef6.json
icalendar/: Cargo.toml
icalendar/examples/: from_file.rs
icalendar/src/: content_line.rs  lib.rs  line_iter.rs  macros.rs  params.rs  parser.rs  types.rs  values.rs
icalendar/src/parser/: error.rs  helpers.rs  lexer.rs  line.rs  line_iter.rs  mod.rs  param_map.rs
icalendar/src/types/: attachment.rs  data.rs  location.rs  mod.rs  name.rs  priority.rs  recur.rs  vec_one.rs
migrations/: 20250719160308_initial.down.sql  20250719160308_initial.up.sql
plannr/: Cargo.toml
plannr-cli/: Cargo.toml
plannr-cli/src/: main.rs
plannr-ui/: Cargo.toml
plannr-ui/src/: main.rs
plannr/src/: data.rs  db.rs  google_creds.rs  lib.rs
plannr/src/data/: interval.rs
src/: data.rs  db.rs  main.rs
