
[workspace]
resolver = "3"
members = ["plannr", "plannr-cli", "plannr-ui"]

default-members = ["plannr-cli"]

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
cli-table = { version = "0.5", default-features = false }
anyhow = "1"
camino = "1"
clap = "4"
dotenv = "0.15"
oauth2 = "5"
reqwest = "0.12"
serde = "1"
serde_json = "1"
sqlx = "0.8"
thiserror = "2"
time = "0.3"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
xilem = { version = "0.3", path = "../../contrib/xilem/xilem" }
